Adding example